Fix request #17087: big motd + logged in + resize = 💩
Replace jScrollPane by smooth-scrollbar in FP. That way we use the same
library than BurningParrot. One less jQuery dependency, yay \o/

Fix issue when you have a very long motd text, and you are logged in, and you
resize the viewport: the logo should not go under the motd when the
latter wraps.

--- a/src/themes/FlamingParrot/css/utils/_sidebar.scss
+++ b/src/themes/FlamingParrot/css/utils/_sidebar.scss
@@ -19,9 +19,11 @@
 
 /* stylelint-disable selector-class-pattern, selector-no-qualifying-type */
 .sidebar-nav {
+    display: flex;
     position: fixed;
     z-index: 1000;
     top: 0;
+    flex-direction: column;
     width: $sidebar-width;
     max-width: $sidebar-width;
     height: 100vh;
